k8s/7.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  namespace: analytics
spec:
  minReadySeconds: 25
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jupyter-notebook
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jupyter-notebook
    spec:
      containers:
      - image: whyxn/jupyter-notebook.spark.3.2.1:v3.0
        imagePullPolicy: IfNotPresent
        name: app
        command: [ "/bin/bash", "-c", "--" ]
        args: [ "jupyter lab --ip 0.0.0.0  --MappingKernelManager.cull_idle_timeout=1800" ]
        ports:
        - containerPort: 8888
          protocol: TCP
        - containerPort: 4040
          protocol: TCP
        - containerPort: 20020
          protocol: TCP
        - containerPort: 20021
          protocol: TCP
        - containerPort: 20022
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 2Gi
        livenessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8888
          timeoutSeconds: 10
        readinessProbe:
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8888
          timeoutSeconds: 10
        volumeMounts:
        - name: config-volume
          mountPath: /etc/jupyter
        - mountPath: /home/whyxn/work
          name: data-vol
          subPath: rfs/home/whyxn/work
        - mountPath: /home/whyxn/data
          name: data-vol
          subPath: rfs/home/whyxn/data
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      volumes:
      - name: config-volume
        configMap:
          name: jupyter-notebook-config
      - name: data-vol
        persistentVolumeClaim:
          claimName: jupyter-notebook-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
      serviceAccountName: spark-driver
      terminationGracePeriodSeconds: 5
