k8s/5.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook
  namespace: analytics
spec:
  ports:
  - name: http-rest
    port: 8888
    protocol: TCP
    targetPort: 8888
  - name: spark-driver-1
    port: 20020
    protocol: TCP
    targetPort: 20020
  - name: spark-driver-2
    port: 20021
    protocol: TCP
    targetPort: 20021
  - name: spark-driver-3
    port: 20022
    protocol: TCP
    targetPort: 20021
  - name: spark-ui
    port: 4040
    protocol: TCP
    targetPort: 4040
  selector:
    app: jupyter-notebook
  sessionAffinity: None
  type: ClusterIP
