k8s/8.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: jupyter-notebook
  namespace: analytics
spec:
  rules:
  - host: jnb.devxn.com
    http:
      paths:
      - backend:
          service:
            name: jupyter-notebook
            port:
              number: 8888
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - jnb.devxn.com
    secretName: cert-secret
